WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163860
Backdrop filter doesn't show if removed then re-added
https://bugs.webkit.org/show_bug.cgi?id=163860
Summary
Backdrop filter doesn't show if removed then re-added
Simon Fraser (smfr)
Reported
2016-10-22 19:28:45 PDT
Backdrop filter doesn't show if removed then re-added
Attachments
Patch
(7.58 KB, patch)
2016-10-22 19:31 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-10-22 19:31:14 PDT
Created
attachment 292527
[details]
Patch
mitz
Comment 2
2016-10-22 19:35:11 PDT
Comment on
attachment 292527
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=292527&action=review
> LayoutTests/css3/filters/backdrop/add-remove-add-backdrop-filter-expected.html:5 > + <title>This tests that backdrop filter with clip-path works properly.</title>
It tests something else.
Simon Fraser (smfr)
Comment 3
2016-10-22 21:07:14 PDT
(In reply to
comment #2
)
> Comment on
attachment 292527
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=292527&action=review
> > > LayoutTests/css3/filters/backdrop/add-remove-add-backdrop-filter-expected.html:5 > > + <title>This tests that backdrop filter with clip-path works properly.</title> > > It tests something else.
Was fixed before committing.
https://trac.webkit.org/changeset/207722
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug